# xcallback

./: .gitignore  Cargo.toml  Makefile  README.md
app/: Info.plist
src/: cli.rs  client.rs  lib.rs  macos.rs  main.rs  x_callback_url.rs
